Ajustes de codigo

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,15 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Buscar Filme"
+        android:inputType="textNoSuggestions|textVisiblePassword"
+        android:importantForAutofill="no"
+        android:autofillHints=""
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 
     <Button
         android:id="@+id/add_button"
